--- a/TicTacToe-GUI/nbproject/project.properties
+++ b/TicTacToe-GUI/nbproject/project.properties
@@ -35,12 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TicTacToe-GUI
 endorsed.classpath=
 excludes=
-file.reference.flatlaf-3.6.jar=/home/agam7/Downloads/flatlaf-3.6.jar
+file.reference.flatlaf-3.6.jar=lib/flatlaf-3.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.flatlaf-3.6.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.flatlaf-3.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
